src/assets/index.css
@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");

@import url("https://fonts.googleapis.com/css?family=Raleway:400,700");

/* @tailwind base;
@tailwind components;
@tailwind utilities; */

/* ELEMENTS */

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Manrope", sans-serif;
  font-feature-settings: "ss01" 1, "ss03" 1;
}

body::-webkit-scrollbar {
  display: none;

}

body {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

a {
  text-decoration: none;
}
.overallBackground{
  position: absolute;
  top: -10px;
  width: 100vw;
  z-index: -1;
}


button,
input.button {
  display: inline-block;
  padding: 0.3em 1em;
  border: 0.1em solid #272727;
  margin: 0.3em;
  border-radius: 0.12em;
  box-sizing: border-box;
  text-decoration: none;
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  color: #000000;
  text-align: center;
  transition: all 0.2s;
  min-width: 7em;
}

button:hover {
  color: #ffffff;
}

h1 {
  font-size: 1.5em;
  font-weight: 200;
}

.app-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

.root {
  width: 100%;
  height: 100%;
}

input,
span,
label,
textarea {
  font-family: "Ubuntu", sans-serif;
  display: block;
  margin: 10px;
  padding: 5px;
  border: none;
  font-size: 22px;
}

textarea:focus,
input:focus {
  outline: 0;
}

textarea {
  width: 100%;
  height: 50%;
  padding: 12px 20px;
  box-sizing: border-box;
  border: 2px solid #ccc;
  border-radius: 4px;
  background-color: #f8f8f8;
  resize: none;
}

html {
  width: 100%;
}

/* NAV */

.nav-bar-container {
  border-bottom: 1px solid black;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 2em;
}

ul.nav-bar-list {
  list-style: none;
  width: 75%;
  display: flex;
  justify-content: center;
  align-items: center;
}

li.nav-bar-link {
  margin: 5px;
}

/* HEADER */

.header-container {
  border-bottom: 1px solid black;
  height: 4em;
}

.switch {
  /* border: 1px solid black; */
}

/* USER */

.user-container {
  border-bottom: 1px solid black;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  z-index: 1;
  position: relative;
}

.user-top {
  display: flex;
  flex-direction: wrap;
  justify-content: flex-start;
  gap: 10vw;
}

.user-profile-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 20px;
  width: 60%;
  height: 30%;
  gap: 1em;
  border: 2px solid grey;
  border-radius: 10px;
  background-color: white;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}
.user-profile-container-top {
  display: flex;
  flex-direction: wrap;
  justify-content: center;
  align-items: center;
  margin: 20px;
  width: 60%;
  height:15%;
  gap: 1em;
  border: 2px solid grey;
  border-radius: 10px;
  background-color: white;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

.user-profile-picture-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.user-profile-container h3 {
  width: 6.5em;
}

.user-profile-container input {
  width: 130px;
  box-sizing: border-box;
  border: 2px solid rgb(76, 76, 76);
  border-radius: 4px;
  font-size: 16px;
  background-color: white;
  background-position: 10px 10px;
  background-repeat: no-repeat;
  padding: 12px 20px 12px 40px;

  width: 13em;
}

.user-profile-container button {
  width: 130px;
  box-sizing: border-box;
  border: 2px solid rgb(76, 76, 76);
  border-radius: 4px;
  font-size: 16px;
  background-color: white;
  background-position: 10px 10px;
  background-repeat: no-repeat;
  padding: 12px 20px 12px 40px;

  width: 13em;
}

.page-container {
	margin: 15px;
	padding: 10px;
	background-image: url(./logos/worm-logo-3.png);
	background-size: 120px;
	background-repeat:no-repeat;
	height: 100%;
  z-index: -1;
}

.logo-container-position {
	margin: 3em;
}

/* AUTH */

.auth-container {
  border-bottom: 1px solid black;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  z-index: 1;
  position: relative;
}

.auth-signup-container,
.auth-login-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 20px;
  width: 60%;
  height: 40%;
  gap: 1em;
  border: 2px solid grey;
  border-radius: 10px;
  background-color: white;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

.auth-current-user-container {
  font-size: 1.5em;
}

h3.auth-header {
  width: 6.5em;
}

.email-password-input {
  width: 130px;
  box-sizing: border-box;
  border: 2px solid rgb(76, 76, 76);
  border-radius: 4px;
  font-size: 16px;
  background-color: white;
  background-position: 10px 10px;
  background-repeat: no-repeat;
  padding: 12px 20px 12px 40px;
  transition: width 0.4s ease-in-out;
  width: 13em;
}

.email-password-input:focus {
  border: 3px solid #555;
}

/* SEARCH */

.search-container {
  display: flex;
  align-items: center;
  justify-content: center;
  /* justify-content: space-evenly; */
  /* height: 20vh; */
  /* border: 1px solid blue; */
}

.search-input-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  /* border: 1px solid black; */
}

.search-input {
  border-radius: 10px;
  height: 2em;
  background: rgba(255, 255, 255, 0.5);
  text-align: center;
}

.search-icon {
  background: transparent;
  border: none;
}

.search-icon-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.search-results-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  justify-content: center;
  align-items: center;
  /* border: 1px solid purple; */
}

.search-results-temp-text {
  font-size: 4em;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}
/* ... */

